Fix tests from z-index issue, revise comments in FTL file, add logic to hide the sticky promo if the string is not localized
Add matchMedia logic to hide the promo on mobile

--- a/media/css/firefox/includes/_sticky-promo.scss
+++ b/media/css/firefox/includes/_sticky-promo.scss
@@ -7,6 +7,11 @@ $image-path: '/media/protocol/img';
 @import '../../../protocol/css/includes/lib';
 @import '../../../protocol/css/components/sticky-promo';
 
+// Hide promo by default for mobile devices (<$mq-md)
+.mzp-c-sticky-promo {
+    display: none;
+}
+
 // Show non-Fx users a promo to download Fx
 .promo-firefox {
     .is-firefox & {
@@ -56,5 +61,11 @@ $image-path: '/media/protocol/img';
         height: 100%;
         display: block;
         margin-inline-end: $spacing-md;
+    }
+}
+
+@media #{$mq-md} {
+    .mzp-c-sticky-promo {
+        display: block;
     }
 }
